--- a/css/index.css
+++ b/css/index.css
@@ -6,18 +6,18 @@ body {
 
 /* TYPOGRAPHY */
 h1 {
-    font-size: 2.25em;
+    font-size: 2.25rem;
     color: whitesmoke;
 }
 
 h2 {
     color: #451c7a;
-    font-size: 1.75em; /* convert to em */
+    font-size: 1.75rem;
     margin-top: 0;
 }
 
 h3 {
-    font-size: 1.25em;
+    font-size: 1.25rem;
 }
 
 h1, h3 {
@@ -30,7 +30,7 @@ p {
 
 .subheading {
     display: block;
-    font-size: 0.56em;
+    font-size: 1.25rem;
     color: #d0aaff;
 }
 
@@ -67,7 +67,7 @@ a:hover, a:active {
 }
 
 .btn {
-    font-size: 1.125em;
+    font-size: 1.125rem;
     font-weight: 500;
     text-decoration: none;
     display: inline-block;
