Start applying media queries and mobile-first approach

--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ h1, h3 {
 }
 
 p {
-    line-height: 23px;
+    line-height: 1.5;
 }
 
 .subheading {
@@ -105,9 +105,9 @@ section:nth-child(even) {
     margin: 0 auto;
 }
 
-.feature-img-container {
+.section-two-img-container {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
 
 /* IMAGES */
@@ -120,13 +120,25 @@ section:nth-child(even) {
 }
 
 .feature-image {
-    /* Setting img width to value just under 50% creates a small gap between them */
-    width: 48.8%;
     border-radius: 4.6px;
+    margin-bottom: 1em;
 }
 
 /* FOOTER */
 footer {
     text-align: center;
     color: #5F29A3
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 480px) {
+    .section-two-img-container {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .feature-image {
+        /* Setting img width to value just under 50% creates a small gap between them */
+        width: 48.8%;
+    }
 }
