--- a/css/index.css
+++ b/css/index.css
@@ -6,13 +6,13 @@ body {
 
 /* TYPOGRAPHY */
 h1 {
-    font-size: 2.25rem;
+    font-size: 1.75rem;
     color: whitesmoke;
 }
 
 h2 {
     color: #451c7a;
-    font-size: 1.75rem;
+    font-size: 1.375rem;
     margin-top: 0;
 }
 
@@ -30,7 +30,7 @@ p {
 
 .subheading {
     display: block;
-    font-size: 1.25rem;
+    font-size: 1rem;
     color: #d0aaff;
 }
 
@@ -70,10 +70,10 @@ a:hover, a:active {
     font-size: 1.125rem;
     font-weight: 500;
     text-decoration: none;
-    display: inline-block;
+    text-align: center;
+    display: block;
     padding: 0.5em 1em;
     border-radius: 4.6px;
-    margin-right: 0.5em;
     margin-top: 1em;
 }
 
@@ -88,11 +88,25 @@ header, section:nth-child(even) {
     background: #5F29A3;
 }
 
+nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.125rem;
+    display: block;
+    padding: 0.85em 0;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
 /* LAYOUT */
 header, 
 section, 
 footer {
-    padding: 2.875em 0;
+    padding: 1.25em 0;
 }
 
 section:nth-child(even) {
@@ -105,11 +119,6 @@ section:nth-child(even) {
     margin: 0 auto;
 }
 
-.section-two-img-container {
-    display: flex;
-    flex-direction: column;
-}
-
 /* IMAGES */
 
 .main-img {
@@ -120,6 +129,7 @@ section:nth-child(even) {
 }
 
 .feature-image {
+    width: 100%;
     border-radius: 4.6px;
     margin-bottom: 1em;
 }
@@ -133,12 +143,55 @@ footer {
 /* MEDIA QUERIES */
 @media (min-width: 480px) {
     .section-two-img-container {
-        flex-direction: row;
+        display: flex;
         justify-content: space-between;
     }
 
     .feature-image {
         /* Setting img width to value just under 50% creates a small gap between them */
         width: 48.8%;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        text-align: center;
+    }
+
+    nav {
+        margin-top: 1.5em;
+    }
+
+    li:not(:last-child) {
+        border-bottom: 1px dotted #a190b6;
+    }
+}
+
+@media (min-width: 768px) {
+    header, 
+    section, 
+    footer {
+        padding: 2.875em 0;
+    }
+
+    .btn {
+        display: inline-block;
+        margin-right: 0.5em;
+    }
+
+    h1 {
+        font-size: 2.25rem;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+    }
+
+    .subheading {
+        font-size: 1.25rem;
+    }
+
+    p {
+        font-size: 1.125rem;
     }
 }
