--- a/css/index.css
+++ b/css/index.css
@@ -128,6 +128,16 @@ section:nth-child(even) {
     margin: 0 auto 2em;
 }
 
+.section-two-img-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
+.feature-item {
+    flex: 260px 1;
+}
+
 .feature-image {
     width: 100%;
     border-radius: 4.6px;
@@ -141,18 +151,6 @@ footer {
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 480px) {
-    .section-two-img-container {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .feature-image {
-        /* Setting img width to value just under 50% creates a small gap between them */
-        width: 48.8%;
-    }
-}
-
 @media (max-width: 768px) {
     header {
         text-align: center;
